--- a/core/app/views/ShipmentReports/arrivalRate.html
+++ b/core/app/views/ShipmentReports/arrivalRate.html
@@ -100,7 +100,7 @@
             <td>${ship.showTrackNo()}</td>
             <td>#{time_tooltip time: ship.dates.planBeginDate/}</td>
             <td>#{time_tooltip time: ship.dates.planArrivDate/}</td>
-            <td>#{time_tooltip time: ship.dates.inbondDate, datetime: true/}</td>
+            <td>#{time_tooltip time: ship.dates.receiptDate, datetime: true/}</td>
             <td>${ship.reason}</td>
           </tr>
           #{/list}
