fix bugs for reason

--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -44,7 +44,7 @@
 
       <th>晚到货原因</th>
       <td>
-        <input name="ship.reason" class="span8" rel="popover" placement="right" value="${ship.reason}"/>
+        <input name="ship.reason" class="span8" rel="popover" placement="right" value="${ship.reason}" id="reason"/>
       </td>
     </tr>
 
