--- a/core/app/views/Shipments/_europe.html
+++ b/core/app/views/Shipments/_europe.html
@@ -2,22 +2,22 @@
   <td style="font-family:STXihei" colspan="3" rowspan="4" class="td1">
   #{if country == 'DE' }
     Sold to : TUGGLE ELECTRONIC COMMERCE CO.,LTD <br>
-    Sold to:Rosenstrasse 5,24768 Rendsburg,Germany<br>
+    Address:Rosenstrasse 5,24768 Rendsburg,Germany<br>
     VAT No. : DE 292695920<br>
   #{/if}
   #{elseif country == 'FR'}
     Sold to : SERF Europefides SAS<br>
-    Sold to:5.rue Denis Poisson 75017 Paris<br>
+    Address:5.rue Denis Poisson 75017 Paris<br>
     VAT No. : FR63328387212<br>
   #{/elseif}
   #{elseif country == 'UK'}
     Sold to : Edeer Network Technology CO., LTD<br>
-    Sold to:53A Woodgrange Road London E7 0EL United Kingdom<br>
+    Address:53A Woodgrange Road London E7 0EL United Kingdom<br>
     VAT No. : GB117317336<br>
   #{/elseif}
   #{elseif country == 'IT'}
     Sold to : ACIT S.R.L<br>
-    Sold to: Via Scarlatti 30,20124 Milano(MI),ITALY<br>
+    Address: Via Scarlatti 30,20124 Milano(MI),ITALY<br>
     VAT No. : IT07289420965<br>
   #{/elseif}
   #{else}
