--- a/core/app/views/Shipments/_europe.html
+++ b/core/app/views/Shipments/_europe.html
@@ -10,7 +10,7 @@
     Address:5.rue Denis Poisson 75017 Paris<br>
     VAT No. : FR63328387212<br>
   #{/elseif}
-  #{elseif country == 'UK'}
+  #{elseif country == 'GB'}
     Sold to : Edeer Network Technology CO., LTD<br>
     Address:53A Woodgrange Road London E7 0EL United Kingdom<br>
     VAT No. : GB117317336<br>
