--- a/core/app/views/Shipments/_europe.html
+++ b/core/app/views/Shipments/_europe.html
@@ -67,6 +67,9 @@
 #{elseif country == 'FR' }
   <td>FR63328387212</td>
 #{/elseif}
+#{elseif country == 'IT' }
+  <td>IT07289420965</td>
+#{/elseif}
 #{else}
   <td>GB117317336</td>
 #{/else}
