--- a/core/app/views/Payments/_procurePdf.html
+++ b/core/app/views/Payments/_procurePdf.html
@@ -59,11 +59,11 @@
     #{if payment.state != models.finance.Payment.S.PAID}
     <td>${payment.currency.symbol()} ${payment.approvalAmount()}</td>
     <td>应付美金</td>
-    <td colspan="4">${(payment.rate * payment.approvalAmount()).format('#.##')}</td>
+    <td colspan="4">${(payment.rate * Float.parseFloat(payment.approvalAmount())).format('#.##')}</td>
     #{/if}
     #{else}
     <td>应付${payment.actualCurrency.label()}</td>
-    <td colspan="4">${payment.actualCurrency.symbol()}${(payment.rate * payment.approvalAmount()).format('#.##')}</td>
+    <td colspan="4">${payment.actualCurrency.symbol()}${(payment.rate * Float.parseFloat(payment.approvalAmount())).format('#.##')}</td>
     #{/else}
   </tr>
 </table>
