--- a/core/app/views/MarketAnalysis/tags.html
+++ b/core/app/views/MarketAnalysis/tags.html
@@ -4,5 +4,5 @@
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
-<iframe src="http://etracker.easya.cc/tags?request_type=iframe" width="100%" height="950"
+<iframe src="https://etracker.easya.cc/tags?request_type=iframe" width="100%" height="950"
         frameborder="no"></iframe>
