--- a/core/app/views/Orders/_invoice_return.html
+++ b/core/app/views/Orders/_invoice_return.html
@@ -111,10 +111,10 @@
       #{if  (ord.market==models.market.M.AMAZON_ES || ord.market==models.market.M.AMAZON_UK ||ord.market==models
       .market.M.AMAZON_FR) || (ord.market==models
       .market.M.AMAZON_IT && invoice?.europevat==models.market.OrderInvoice.VAT.EUROPE)}
-        <img src="/images/common/EDEER-logo.jpg" style="height:100%">
+        <img src="http://e.easya.cc/images/common/EDEER-logo.jpg" style="height:100%">
       #{/if}
       #{if  (ord.market==models.market.M.AMAZON_DE) ||  (ord.market==models.market.M.AMAZON_IT && (invoice==null || invoice.europevat!=models.market.OrderInvoice.VAT.EUROPE))}
-        <img src="/images/common/TUGGLE-logo.jpg" style="height:100%">
+        <img src="http://e.easya.cc/images/common/TUGGLE-logo.jpg" style="height:100%">
       #{/if}
       </div>
     </td>
