--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -59,7 +59,7 @@
   <tr>
     <td colspan="5" class="td1">
       <div class="div1">
-        <img src="/images/common/LANTO.png" style="height:100%">
+        <img src="http://e.easya.cc/images/common/LANTO.png" style="height:100%">
       </div>
     </td>
   </tr>
@@ -114,7 +114,7 @@
         <p>LANTO Electronic Commerce Co., Ltd</p>
 
         <p>SIGNATURE</p>
-        <img src="/images/common/signature.png">
+        <img src="http://e.easya.cc/images/common/signature.png">
       </div>
     </td>
   </tr>
