--- a/core/app/views/CheckTasks/checklist.html
+++ b/core/app/views/CheckTasks/checklist.html
@@ -150,7 +150,7 @@
         <td>${tl.units.selling?.fnSku}</td>
         <td><a href="@{Deliveryments.show(tl.units?.deliveryment?.id)}">${tl.units?.deliveryment?.id}</a></td>
         <td>${tl.shipwhouse?.name}</td>
-        <td>${tl.units.cooperator.name}</td>
+        <td>${tl.units.cooperator?.name}</td>
         <td>${tl.units.cooperator?.qcLevel?.label()}</td>
         <td>${tl.units.attrs.planQty}</td>
         <td>${tl.units.attrs.qty}</td>
