* 修改 iframe 的地址

--- a/core/app/views/MarketAnalysis/channels.html
+++ b/core/app/views/MarketAnalysis/channels.html
@@ -4,5 +4,5 @@
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
-<iframe src="http://etracker.easya.cc/channels?request_type=iframe" width="100%" height="950"
+<iframe src="https://etracker.easyacc.com/channels?request_type=iframe" width="100%" height="950"
         frameborder="no"></iframe>
