--- a/core/app/views/Users/index.html
+++ b/core/app/views/Users/index.html
@@ -54,30 +54,75 @@
 
           <tr id="${user.username}_privileges" style="display:none;">
             <td colspan="5">
+
+
+
+
+
+
+
+
+
+
               <form method="post" action="@{Users.privileges()}" class="privilege_form">
-                <table class="table table-bordered table-condensed">
-                <tr>
-                    #{list items:privileges, as:'up'}
-                      <td colspan="${privileges.size() == up_index ? (privileges.size() - (up_index % 8)) : '1'}">
-                        <label class="checkbox">
-                          <input type="checkbox" name="privilegeId" value="${up.id}" ${user.isHavePrivilege(up) ? 'checked' : ''}>
-                          <a href="javascript:;" rel="tooltip" title="${up.name}">${up.memo}</a>
-                        </label>
-                      </td>
-                        #{if up_index % 8 == 0}
-                        </tr>
-                        <tr>
-                        #{/if}
-                    #{/list}
-                </tr>
-                  <tr>
-                    <td colspan="8">
-                      <input type="hidden" name="id" value="${user.id}">
-                      <button class="btn btn-primary">提交</button>
-                    </td>
-                  </tr>
-                </table>
-              </form>
+                             <table class="table table-condensed table-bordered">
+                               <tr>
+                                 <th colspan="4">模块名称</th>
+                                 <th colspan="4">菜单名称</th>
+                                 <th colspan="4">权限</th>
+                               </tr>
+
+                                 #{list items:modules, as:'module'}
+                                 <tr>
+                                   <td colspan="4" rowspan="${((List)maps.get(module.id)).size+1}">
+                                     <label class="checkbox">
+                                       <input type="checkbox" name="privilegeId" data-userid="${user.id}"
+                                              value="${module.id}" ${user.isHavePrivilege(module) ?
+                                       'checked' : ''}>
+                                       <a href="javascript:;" rel="tooltip" title="${module.name}">${module.memo}</a>
+                                     </label>
+                                   </td>
+
+
+                                     #{list items:maps.get(module.id), as:'function'}
+                                       <tr  id="menu" >
+                                         <td colspan="4" rowspan="${((List)maps.get(function.id)).size+1}">
+                                           <label class="checkbox">
+                                             <input type="checkbox" id="checkboxmenu"  data-userid="${user.id}"
+                                                    class="${user.id}menu${module.id}"  name="privilegeId"
+                                                    value="${function.id}"
+                                             ${user.isHavePrivilege(function) ?
+                                             'checked' : ''}>
+                                             <a href="javascript:;" rel="tooltip" title="${function.name}">${function.memo}</a>
+                                           </label>
+                                         </td>
+                                       <td colspan="6">
+                                           #{list items:maps.get(function.id), as:'menu'}
+                                               <label class="checkbox">
+                                                 <input type="checkbox" name="privilegeId"  data-userid="${user.id}"
+                                                        class="${user.id}menu${function.id}"
+                                                        value="${menu.id}" ${user.isHavePrivilege(menu) ?
+                                                 'checked' : ''}>
+                                                 <a href="javascript:;" rel="tooltip" title="${menu.name}">${menu.memo}</a>
+                                               </label>
+                                           #{/list}
+                                         <td>
+                                       </tr>
+                                     #{/list}
+                                   </tr>
+                                 #{/list}
+
+                               <tr>
+                                 <td colspan="14">
+                                   <input type="hidden" name="id" value="${user.id}">
+                                   <button class="btn btn-primary">提交</button>
+                                 </td>
+                               </tr>
+                             </table>
+                           </form>
+
+
+
             </td>
           </tr>
 
