--- a/core/app/views/Products/_basicInfo.html
+++ b/core/app/views/Products/_basicInfo.html
@@ -139,8 +139,10 @@
 </tr>
 
 <tr>
-  <th>State(运营)</th>
-  <td colspan="3" style="color:${pro.state?.fontcolor()}">${pro.state}</td>
+  <td>State(运营)</td>
+  <td style="color:${pro.state?.fontcolor()}">${pro.state}</td>
+  <td>Part Number</td>
+  <td><input type="text" name="pro.partNumber" value="${pro.partNumber}" required></td>
 </tr>
 
 <tr>
