--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -170,10 +170,12 @@
 
         <tr>
           <th>产品名称</th>
-          <td colspan="5">
+          <td colspan="3">
             <input type="text" style="width:95%" id="pro_abbreviation" name="pro.abbreviation" value="${pro.abbreviation}"
                    required="required">
           </td>
+          <th style="">Part Number</th>
+          <td><input type="text" name="pro.partNumber" value="${pro.partNumber}" required></td>
         </tr>
 
         <tr>
