--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -1,6 +1,6 @@
-<table class="table table-condensed table-bordered">
+<table class="table table-condensed table-bordered" id="shipmentTable">
   <tr>
-    <th style="width:2%"><input type="checkbox" class="checkbox_all"/></th>
+    <th style="width:2%"><input type="checkbox" class="checkbox_all" value="0"/></th>
     <th style="width:3%">#</th>
     <th style="width:15%">Track No.</th>
     <th style="width:5%">运输商</th>
