--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -76,21 +76,21 @@
       </div>
     </div>
   </div>
-
-  <div class="row-fluid">
-    <div class="span12">
-    #{render 'Shipments/_shipment_list.html', shipments:shipments/}
-    </div>
-    <div class="btn-toolbar">
-    #{power.ck 'applys.shipmenttoapply'}
-      <button id="createApplyBtn" class="btn btn-success" data-url='@{Applys.shipmentToApply()}'
-              data-disable-with='创建请款单中...'>
-        创建运输请款单
-      </button>
-    #{/power.ck}
-      <a href="javascript:void(0)" data-url="@{Excels.shipmentDetails()}" id="download_excel" class="btn btn-primary"
-         >
-        <i class="icon-download-alt"></i>导出运输单发货明细excel</a>
-    </div>
-  </div>
 </form>
+
+<div class="row-fluid">
+  <div class="span12">
+  #{render 'Shipments/_shipment_list.html', shipments:shipments/}
+  </div>
+  <div class="btn-toolbar">
+  #{power.ck 'applys.shipmenttoapply'}
+    <button id="createApplyBtn" class="btn btn-success" data-url='@{Applys.shipmentToApply()}'
+            data-disable-with='创建请款单中...'>
+      创建运输请款单
+    </button>
+  #{/power.ck}
+    <a href="javascript:void(0)" data-url="@{Excels.shipmentDetails()}" id="download_excel" class="btn btn-primary">
+      <i class="icon-download-alt"></i>导出运输单发货明细excel</a>
+  </div>
+</div>
+
