--- a/core/app/views/Analyzes/index.html
+++ b/core/app/views/Analyzes/index.html
@@ -75,7 +75,7 @@
           #{option ''}Category#{/option}
       #{/select}
 
-      #{select 'p.state', items:['Active', 'Inactive'], value: p.state, class: 'inline'}
+      #{select 'p.state', items:['Active', 'Inactive', 'All'], value: p.state, class: 'inline'}
       #{/select}
 
         <div class="input-append input-prepend inline">
