--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -63,8 +63,7 @@
   #{list items:dtos, as:'dto'}
   <tr>
     <td class="sid"><i class="icon-bolt"></i> ${dto.fid}</td>
-    <td><a href="${dto.asinLink()}" target="_blank"><i class="icon-external-link"></i> ${dto.asin}
-    </a></td>
+    <td><a href="${dto.asinLink()}" target="_blank"><i class="icon-external-link"></i> ${dto.asin}</a></td>
     <td style="color:#A5B600" data-dtofid='<%= dto.fid %>'>${dto.plan}</td>
     <td width="90px">
       <button class="btn btn-mini btn-info">操作</button>
