--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -29,6 +29,9 @@
       #{power.ck "listings.trackedlistings"}
         <li><a href="@{Listings.trackedListings()}">Tracked Listing</a></li>
       #{/power.ck}
+      #{power.ck "sellings.index"}
+        <li><a href="@{Sellings.index()}">Selling</a></li>
+      #{/power.ck}
       #{power.ck "orders.index"}
         <li><a href="@{Orders.index()}">订单</a></li>
       #{/power.ck}
