--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -280,7 +280,8 @@
 
           <th>地址</th>
           <td colspan="3">
-            <input type="text" class="span12" name="excel.buyerAddress" id="excel_buyerAddress" value="湖南省长沙市开福区万达写字楼B栋10016">
+            <input type="text" class="span12" name="excel.buyerAddress" id="excel_buyerAddress"
+            value="香港中环美国银行中心大厦25楼2508A室">
           </td>
         </tr>
         <tr>
